# scrape-python

./: .dockerignore  .env-example  .gitignore  Dockerfile  OBSERVABILITY.md  README.md  docker-compose.yml  main.py  pyproject.toml  youtube-video.jsonschema
docs/: SCHEMA.md
files/: grafana-youtube.json  prometheus-alerts-youtube.yml
scrape_exchange/: __init__.py  bulk_upload.py  channel_list_parsing.py  channel_map.py  content_claim.py  creator_map.py  creator_queue.py  datatypes.py  exchange_client.py  file_management.py  logging.py  name_map.py  rate_limiter.py  redis_claim.py  schema_validator.py  scrape_exchange_rate_limiter.py  scraper_metrics.py  scraper_runner.py  scraper_supervisor.py  settings.py  util.py  video_claim.py  worker_id.py
scrape_exchange/tiktok/: __init__.py  settings.py  tiktok_caption.py  tiktok_creator.py  tiktok_error_classification.py  (+9 more)
tests/: yt_channel_videos.py
tools/: augment_videos.py  build_name_map_from_archive.py  channel_cleanup.py  cleanup_channel_list.py  convert_yt_dlp_video_data.py  export_channel_map.py  export_uploaded_ids.py  filter_unresolved_channel_ids.py  listen_messages.py  merge_channel_maps.py  rebuild_creator_map.py  reingest_from_archive.py  schema_upload.py  scrape_delete.py  validate_youtube_channel_schema.py  yt_channel_scrape.py  yt_channel_upload.py  yt_delete_items.py  yt_discover_channels.py  yt_import_3rdparty_data.py  yt_resolve_channel_ids.py  yt_review.py  yt_rss_reader.py  yt_rss_reconcile.py  yt_rss_scrape.py  yt_runtime_benchmark.py  yt_vid_scrape.py  yt_video_proxy_scrape.py  yt_video_scrape.py
(+124 files in other folders)
