[project]
name = "scrape-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "country-converter>=1.3.2",
    "httpx>=0.23.3",
    "innertube>=2.1.19",
    "jsonschema>=4.26.0",
    "orjson>=3.11.7",
    "yt-dlp[default]>=2026.2.4",
]
