[project]
name = "scrape-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "brotli>=1.2.0",
    "country-converter>=1.3.2",
    "httpx[http2,socks]>=0.23.3",
    "innertube>=2.1.19",
    "jsonschema>=4.26.0",
    "orjson>=3.11.7",
    "pydantic-settings>=2.3.0",
    "untangle>=1.2.1",
    "websockets>=16.0",
    "yt-dlp[curl-cffi,default]>=2026.3.3",
    "yt-dlp-ejs>=0.5.0",
    "httpx-curl-cffi>=0.1.5",
    "prometheus-client>=0.21.0",
    "redis[hiredis]>=5.0.0",
    "watchfiles>=1.1.1",
    "beautifulsoup4>=4.14.3",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "fakeredis[lua]>=2.0",
]

[project.optional-dependencies]
tiktok = [
    "TikTokApi>=7.0.0",
    "playwright>=1.50.0",
]
